# tsn-scheduler

./: .gitignore  .gitlab-ci.yml  CMakePresets.json  LICENSE.txt  Makefile  NOTES.md  README.md  __main__.py  benchmark.sh  requirements.txt  scheduler.py  test.json
.github/workflows/: cmake-single-platform.yml
benchmarks/2_switches_6_devices/: network.csv  streams.csv
benchmarks/5_switches_7_devices/: network.csv
benchmarks/networks/: 3_9.csv
business/: __init__.py  stream.py
business/network/: __init__.py  network.py  node.py
cli/: CMakeLists.txt  main.cpp
constants/: ethernet.py
docs/: bibliography.bib
docs/structuring_smt_tsn/: structuring_smt_tsn.tex  structuring_smt_tsn2.tex
experiments/: CMakeLists.txt  incremental_rescheduling.py  test.csv
experiments/2_switches_6_devices/: new_streams.csv
experiments/incremental/: incremental.cpp  incremental.hpp
experiments/subnets/: CMakeLists.txt  subnet.cpp  subnet.hpp
gym/: .gitignore  incremental_rescheduling.py  iterative_rescheduling.py  rescheduling.py
io/generate/: streams.hpp
lib/: CMakeLists.txt  schedule.cpp  schedule.h  schedule.hpp
lib/business/: CMakeLists.txt  ethernet.h  ethernet.hpp  generate.py  link.cpp  link.h  link.hpp  network.cpp  network.hpp  node.cpp  node.h  offset.cpp  offset.hpp  offset.py  stream.cpp  stream.h  stream.hpp  stream_set.cpp  stream_set.hpp
lib/scheduling/: CMakeLists.txt  gracunias.cpp  gracunias.h  gracunias.hpp  scheduler_base.hpp
scheduler/: README.md  __init__.py  __main__.py  requirements.txt  scheduler.py
scheduler++/: .gitignore  CMakeLists.txt  CMakePresets.json
scheduler++/cli/: CMakeLists.txt  commands.h  main.cpp
scheduler++/experiments/subnets/: CMakeLists.txt  subnet.cpp
scheduler++/lib/: CMakeLists.txt  schedule.cpp  schedule.h
scheduler++/lib/business/: link.h  network.h  node.h  stream.cpp  stream.h
scheduler++/lib/scheduling/: gracunias.cpp  gracunias.h  schedule_interface.h
scheduler/benchmarks/2_switches_6_devices/: new_streams.csv
scheduler/business/: __init__.py  stream.py
scheduler/business/network/: link.py  node.py
scheduler/commands/: __init__.py  api.py  arguments.py  cli.py  reschedule.py  schedule.py  streams.py
scheduler/constants/: __init__.py  ethernet.py
scheduler/file/: __init__.py  network.py  offset.py  stream.py
scheduler/schedule/: __init__.py  graciunas.py  gracunias.py  hermes.py
scheduler/specific/: __init__.py  all.py  graciunas.py  hermes.py  tsnsched.py
scheduler/streams/: __init__.py  generate.py
scheduler/utils/: __init__.py  command.py  file.py  from_file.py  streams.py
utils/: __init__.py  command.py  from_file.py  streams.py
