add_executable(subnets)

target_sources(subnets 
    PRIVATE 
        subnet.cpp
)

target_link_libraries(subnets PRIVATE scheduler)

include(FetchContent)
FetchContent_Declare(Z3
        GIT_REPOSITORY https://github.com/Z3Prover/z3
        GIT_TAG        z3-4.15.3
)
FetchContent_MakeAvailable(Z3)

# Add the C++ API include directory for z3++.h
if(TARGET libz3)
    target_include_directories(libz3 INTERFACE
        $<BUILD_INTERFACE:${z3_SOURCE_DIR}/src/api/c++>
    )
endif()

target_link_libraries(subnets PRIVATE libz3)